# yards

./: .gitignore  LICENSE  README.md  pyproject.toml
dist_old/: yards-0.1.0-py3-none-any.whl  yards-0.1.1-py3-none-any.whl
example/: config.yaml
example/smb_handlabeled/labels/: n-im_00001.txt  n-im_00002.txt  n-im_00003.txt  n-im_00004.txt  n-im_00005.txt  n-im_00006.txt  n-im_00007.txt  n-im_00008.txt  n-im_00009.txt  n-im_00010.txt
tests/: test_yards.py
yards/: _cli.py  _test_run.py  data_generator.py  yards.py  yards_prototype.py
yards.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
yards/tools/: _helper.py  _validator.py
